spec/e2e/variable/use_local_in_initializer.lit
var a = "outer";
{
  var a = a; # error: [line 3] Error at "a": Can't read local variable in its own initializer.
}
